--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,7 @@ phases:
 
   install: 
     commands:
+      - GOPATH=`pwd`
       - go get -u github.com/golang/lint/golint
       - go get -u github.com/golang/lint/golint
       - go get -u github.com/golang/dep/cmd/dep
