buildspec.yml added GOPATH

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,8 +12,11 @@ phases:
       - pwd
       - find .
       - echo $GOPATH
+      - mkdir -p /go/src/$GITHUB_REPO
+      - ln -s `pwd` /go/src/$GITHUB_REPO
       - ls -l /go
       - echo $GITHUB_REPO
+      - cd /go/src/$GITHUB_REPO
       - dep ensure
       # Ensure code passes all lint tests
       # - golint -set_exit_status
