--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,13 +11,13 @@ phases:
     commands:
       - pwd
       - find .
-      - GOPATH=/go
+      - export GOPATH=/go
       - echo $GOPATH
-      - mkdir -p /go/src/$GITHUB_REPO
-      - ln -s `pwd` /go/src/$GITHUB_REPO
-      - ls -l /go
-      - echo $GITHUB_REPO
-      - cd /go/src/$GITHUB_REPO
+      - mkdir -p /go/src/${GITHUB_REPO}
+      - ln -s -v `pwd` /go/src/${GITHUB_REPO}
+      - ls -l /go/src/${GITHUB_REPO}
+      - echo ${GITHUB_REPO}
+      - cd /go/src/${GITHUB_REPO}
       - pwd
       - dep ensure
       # Ensure code passes all lint tests
