--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,23 +15,20 @@ phases:
       - echo $GOPATH
       - echo `pwd`
       - mkdir -p /go/src/${GITHUB_REPO}
-      - ln -s -v `pwd` /go/src/${GITHUB_REPO}
+      - cp ${CODEBUILD_SRC_DIR}/. /go/src/${GITHUB_REPO}
       - ls -l /go/src/${GITHUB_REPO}
       - echo ${GITHUB_REPO}
-      - cd /go/src/${GITHUB_REPO}
-      - pwd
-      - dep ensure
+      - cd  ${GOPATH}/src/${GITHUB_REPO} && pwd && dep ensure
       # Ensure code passes all lint tests
       # - golint -set_exit_status
 
       # Run all tests included with our application
-      - go test
 
   build:
     commands:
-
+      - 
       # Build our application
-      - go build -o app
+      - cd  ${GOPATH}/src/${GITHUB_REPO} && go build -o app
 
 artifacts:
   files:
