--- a/buildspec.yml
+++ b/buildspec.yml
@@ -31,7 +31,7 @@ phases:
       - 
       # Build our application
       - cd  ${GOPATH}/src/${GITHUB_REPO}
-      - go build -o app
+      - go build -o ${CODEBUILD_SRC_DIR}/app
 
 artifacts:
   files:
