--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,10 +5,10 @@ phases:
   install: 
     commands:
       - go get -u github.com/golang/lint/golint
-      - go get -u github.com/golang/lint/golint
       - go get -u github.com/golang/dep/cmd/dep
   pre_build: 
     commands:
+      - export GOPATH=/go
       - mkdir -p `dirname /go/src/${GITHUB_REPO}`
       - ln -s ${CODEBUILD_SRC_DIR}/ /go/src/${GITHUB_REPO}
       - ls -l /go/src/${GITHUB_REPO}
